test/pass/42-for_name_binding.perk
import "stdio.h"

fun main(): void {
    for (let x := 0; x < 1; x = x + 1) {
        printf("%d\n", x);
    };
    for (let x := 0; x < 1; x = x + 1) {
        printf("%d\n", x);
    }
}